--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -666,6 +666,7 @@ layout.  Here we use the recommended suffixes to open sql in the plsql mode.
           (append
            '(("\\.\\(p\\(?:k[bg]\\|ls\\)\\|sql\\)\\'" . plsql-mode))
  auto-mode-alist))
+(autoload 'plsql-mode "plsql" "Oracle Pl/SQL mode" t)
 #+end_src
 * C/C++ Development
 An attempt at a rich configuration for c/c++ environments using the
@@ -1095,5 +1096,12 @@ this work, avoiding starting anothe emacs session.  To enable this we
 have to set the emacs instance up as a server.
 
 #+begin_src emacs-lisp
-(or (server-running-p) (server-start))
+(unless (and (fboundp 'server-running-p)
+             (server-running-p))
+ (server-start))
 #+end_src
+* My functions
+Load my personal functions
+#+BEGIN_SRC emacs-lisp
+(require 'andy-fn)
+#+END_SRC
